@@ -263,6 +263,7 @@ Solr Schema for projects using eulfedora and indexdata.
    <field name="last_modified" type="date" indexed="true" stored="true" /> 
    <field name="owner" type="string" indexed="true" stored="true" multiValued="true"/> 
    <field name="state" type="string" indexed="true" stored="false"/> 
+   <field name="dsids" type="string" indexed="true" stored="true" multiValued="true"/> 
    <!-- explicitly define string-variants of date fields for wildcard searching -->
    <field name="created_s" type="string" indexed="true" stored="true"/> 
    <field name="last_modified_s" type="string" indexed="true" stored="false" /> 
